2008-05-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS:
	Mention GMP and CPStringBuilder.
	
2008-05-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36147
	* gnu/java/lang/CPStringBuilder.java:
	(allocated): New flag to mark whether or
	not the array has been allocated to a String object.
	(ensureCapacity(int)): Removed.
	(ensureCapacity_unsynchronized(int)): Renamed to
	ensureCapacity, and creates an array when allocated
	is true.
	(allocateArray(int)): Added.
	(trimToSize()): Use allocateArray method.
	(toString()): Set allocated to true;
	(substring(int,int)): Likewise.
	
2008-05-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/CPStringBuilder.java:
	Make default capacity configurable.
	
2008-05-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* vm/reference/gnu/java/lang/VMCPStringBuilder.java,
	* vm/reference/gnu/java/lang/management/VMMemoryMXBeanImpl.java,
	* vm/reference/java/net/VMNetworkInterface.java:
	Remove use of 1.5 language constructs.

2008-05-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/util/regex/RE.java:
	Switch to use generic ArrayLists.
	* gnu/java/util/regex/REMatchEnumeration.java:
	Make the enumeration implementation generic.
	* gnu/java/util/regex/RETokenLookBehind.java:
	Remove unused variables.
	
2008-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Add generics to these classes.
	* gnu/java/util/regex/RETokenOneOf.java:
	Use an ArrayList and a Deque instead of
	a Vector and a Stack to remove unnecessary
	synchronisation.
	* gnu/java/util/regex/RETokenRepeated.java:
	Replace custom FindMatchControlStack class
	with a generic Deque.
	* java/util/regex/Pattern.java:
	Use a generic ArrayList instance.
	
2008-05-07  Mario Torre  <neugens@limasoftware.net>
    
	* gnu/java/awt/peer/x/XEventPump.java (handleEvent):
	Fixed mouse dragging and movement in XEventPump. Patch from Roman Kennke.

2008-05-07  Mario Torre  <neugens@aicas.com>
