@@ -1,5 +1,12 @@
 2008-05-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* gnu/java/lang/CPStringBuilder.java:
+	(toString()): Fix comments to reflect copying changes.
+	* vm/reference/gnu/java/lang/VMCPStringBuilder.java:
+	(toString()): Likewise.
+
+2008-05-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* NEWS:
 	Mention GMP and CPStringBuilder.
 	
